Slight HTML changes, updated README with screenshots

--- a/ask/index.html
+++ b/ask/index.html
@@ -44,10 +44,10 @@
           <div class="ask__buttons">
             <div class="buttons">
               <button class="button button--secondary ask__button-reset">
-                Ask a new question
+                Burn some more with a new question!
               </button>
               <button class="button button--primary ask__button-ask">
-                Ask the brains!
+                Send, and burn some energy!
               </button>
             </div>
           </div>
